thing-editor/src/editor/style.css
/* ... */
.modal-spinner-overlay {
	margin: auto;
	margin-top: -69px;
	border-radius: 50%;
	width: 70px;
	height: 70px;
	position: relative;
	background: #000;
}

.modal-spinner-progress {
	margin: auto;
	margin-top: 190px;
	border: 5px solid #223344;
	width: 360px;
	height: 50px;
	background: rgba(0, 0, 0, 0.8);
	overflow: hidden;
	border-radius: 35px;
	text-align: center;
	line-height: 0;
}

.modal-spinner-progress div {
	margin-bottom: -25px;
	height: 50px;
	background-color: #002c23;
}

.modal-title {
	background: #3b3b3b;
	padding: 10px 20px;
	color: #b1c0d0;
	font-weight: bold;
	position: relative;
}

.modal-title img {
	max-height: 20px;
	margin-right: 10px;
}

.modal-body {
	margin: auto;
	margin-top: 100px;
	cursor: initial;
	width: min-content;
	min-width: 500px;
}

.modal-content {
	text-align: center;
	padding: 20px;
	position: relative;
	background: var(--window-bg-color);
	max-height: 70vh;
	overflow-y: overlay;
}

.modal-content .preview-img {
    max-height: 500px;
    max-width: 500px;
}

.choose-list-header {
	display: flex;
	margin-bottom: 20px;
}

.list-view {
	overflow-y: overlay;
	max-height: 60vh;
}

.clickable.choosing-item:hover {
	background-color: #28292a;
}

.choosing-item {
	white-space: nowrap;
	padding: 4px;
	border-bottom: 1px solid #424242;
	position: relative;
}

.props-editor .props-header {
	position: absolute;
	z-index: 1000;
	width: calc(100% - 20px);
	background: var(--window-bg-color);
}

.props-editor .props-group:nth-of-type(2) {
	margin-top: 32px;
}

.refused-item {
	opacity: 0.5;
	cursor: default;
}

.choosing-item b {
	color: #aaaaaa;
}

.choosing-item img {
	margin-right: 10px;
}

.choose-list-header button {
	padding: 3px;
}

input {
	padding: 3px 10px;
	border-radius: 15px;
	box-sizing: border-box;
}

.left-align-text {
	text-align: left;
}

.modal-content input {
	font-size: 130%;
	width: 100%;
	padding: 5px 13px;
}

.main-btn {
	font-size: 120%;
	color: #008f5f;
}

.modal-reject-text {
	height: 33px;
	color: #ff0000;
}

.modal-content textarea {
	width: 50vw;
	height: 50vh;
}

.modal-footer {
	margin-top: 20px;
}

.error {
	color: #be0000;
	text-align: left;
	user-select: text;
}

.error .clickable {
	text-decoration: underline;
}

.error .clickable:hover {
	color: #ffffff;
}

.modal-notification-wrapper {
	max-width: 300px;
	position: fixed;
	pointer-events: none;
	z-index: 1100000;
}

.modal-notification-centred {
	right: calc(50% - 300px);
	bottom: unset;
	top: 20%;
	width: 600px;
}

.modal-notification {
	word-wrap: break-word;
	padding: 10px 20px;
	border-radius: 5px;
	background: #4b4e4e;
	color: #dddddd;
}

.props-field,
.props-field input,
.field-editor-wrapper input {
	font-family: Consolas, "Courier New", monospace;
}

.props-group .props-group {
	margin: 8px;
}

.props-group {
	margin-bottom: 3px;
	border-radius: 13.5px;
	border: 1px solid var(--window-header-color);
	overflow: hidden;
}

.props-group:has(.props-group-header:hover) {
	border-color: #444444;
}

.props-editor .props-group:not(:has(.props-field)) {
	display: none;
}

#property-editor-angle .props-label:before {
	content: "\00b0"
}

.field-editor-wrapper {
	flex-grow: 2;
	display: flex;
}

.field-editor-wrapper button {
	padding: 3px;
}

.props-group-splitter-helpers .props-group-header,
.props-label-helper {
	font-size: small;
}

.props-group-header {
	cursor: pointer;
	padding: 3px 15px;
	background-color: var(--window-header-color);
	color: #a3adb7;
}

.editor-viewport {
	display: flex;
	align-items: center;
	justify-content: center;
	background-color: #1a1a1a;
	width: 100%;
	height: 100%;
	overflow: hidden;
	position: relative;
}

.status-entry {
	margin-left: 10px;
	color: #686868;
}

.red-frame {
	outline: 1px solid #aa0000;
	outline-offset: -2px;
}

.editor-viewport-wrapper {
	display: flex;
	position: absolute;
	left: 0;
	top: 0;
	bottom: 0;
	right: 0;
}

.editor-viewport canvas {
	max-height: 100%;
	max-width: 100%;
	image-rendering: initial;
}

.viewport-panel-wrapper {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.viewport-panel {
	max-width: 75px;
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: center;
}

.viewport-panel-wrapper button {
	width: 100%;
}

.prefabs-mode-title {
	overflow: hidden;
	max-width: 64px;
	text-overflow: ellipsis;
}

.viewport-bottom-panel {
	justify-content: flex-end;
}

.tree-item {
	position: relative;
	overflow-x: hidden;
}

.item-prefab-reference {
	border-right: 3px dotted #676d12;
}

.item-prefab-reference-unknown {
	border-right: 3px dotted #ff0000;
}

.tree-children .tree-item {
	padding-left: 10px;
	background-position: left top;
	background-repeat: no-repeat;
	background-image: url("/thing-editor/img/child.jpg");
}


.tree-children .tree-item:last-child {
	background-image: url("/thing-editor/img/child-last.jpg");
}

.scene-node-item {
	position: relative;
	white-space: nowrap;
	padding: 2px 0;
	cursor: pointer;
}

.scene-node-item:hover {
	background: #323334;
}

#window-info .scene-node-item {
	display: inline-block;
}

#window-info .status-body {
	overflow-y: auto;
}

.tree-desc {
	margin-bottom: 4px;
	margin-left: 18px;
	color: #318331;
	font-size: 90%;
}

.scene-node-name {
	margin-left: 2px;
	font-weight: bold;
}

.scene-node-class {
	font-size: 85%;
}

.list-item {
	position: relative;
	white-space: nowrap;
	padding: 2px;
	cursor: pointer;
}

.list-item:hover {
	background: #3a3c49;
}

.list-item img {
	margin-right: 4px;
}

.item-selected {
	cursor: default;
	background: #2c4145;
	color: #bbbbbb;
}

.tree-caret {
	position: absolute;
	right: -8px;
	top: 0;
	font-size: 200%;
	pointer-events: none;
	line-height: 50%;
}

.tree-children {
	padding-left: 5px;
}

.tree-children .tree-children {
	padding-left: 15px;
	border-left: 1px solid #565656;
}

.props-field {
	border-bottom: 1px solid #111111;
	display: flex;
	align-items: center;
}

.props-field input {
	width: 100%;
}
/* ... */

